there's z fighting, tried to correct that with a different z-index on hover

--- a/scripts/css/style.css
+++ b/scripts/css/style.css
@@ -1027,6 +1027,7 @@ pre {
     position: relative;
     transition: box-shadow 0.1s;
     width: 100%;
+    z-index: 89;
 }
 .no-js .projects-feed .project,
 .projects-feed .loaded {
